--- a/client/portfolio/kingspan.html
+++ b/client/portfolio/kingspan.html
@@ -1,48 +1,50 @@
 <template name="kingspan">
-<div class="container">
+<div class="pf-container">
     <nav class="nav">
-        <a class="button" href=""> Prev</a>
-        <a class="button next" href="/bq">Next</a>
+        <a class="button" href="/inspiration"> Prev</a>
+        <a class="button next" href="/vivienda">Next</a>
     </nav>
-    <article class="about">
-        <h5>BiQuadro 2</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <article class="pf-about">
+        <h5>KINGSPAN PAVILION</h5>
+        <p>
+ 
+        </p>
     </article>
     <div class="main">
         <div class="flexslider">
             <ul class="slides">
                 <li>
-                    <img src="/portfolio/7_Kingspan/01.jpg"/>
+                    <img src="/portfolio/7_Kingspan_pavilion/01.jpg"/>
                 </li>
                 <li>
-                     <img src="/portfolio/7_Kingspan/02.jpg"/>
+                     <img src="/portfolio/7_Kingspan_pavilion/02.jpg"/>
                 </li>
                 <li>
-                     <img src="/portfolio/7_Kingspan/03.jpg"/>
+                     <img src="/portfolio/7_Kingspan_pavilion/03.jpg"/>
                 </li>
                 <li>
-                     <img src="/portfolio/7_Kingspan/04.jpg"/>
+                     <img src="/portfolio/7_Kingspan_pavilion/04.jpg"/>
                 </li>
                 <li>
-                    <img src="/portfolio/7_Kingspan/05.jpg"/>
+                    <img src="/portfolio/7_Kingspan_pavilion/05.jpg"/>
                 </li>
                 <li>
-                     <img src="/portfolio/7_Kingspan/06.jpg"/>
+                     <img src="/portfolio/7_Kingspan_pavilion/06.jpg"/>
                 </li>
                 <li>
-                     <img src="/portfolio/7_Kingspan/07.jpg"/>
+                     <img src="/portfolio/7_Kingspan_pavilion/07.jpg"/>
                 </li>
                 <li>
-                     <img src="/portfolio/7_Kingspan/08.jpg"/>
+                     <img src="/portfolio/7_Kingspan_pavilion/08.jpg"/>
                 </li>
                 <li>
-                    <img src="/portfolio/7_Kingspan/09.jpg" />
+                    <img src="/portfolio/7_Kingspan_pavilion/09.jpg" />
                 </li>
                 <li>
-                     <img src="/portfolio/7_Kingspan/010.jpg"/>
+                     <img src="/portfolio/7_Kingspan_pavilion/010.jpg"/>
                 </li>
                 <li>
-                     <img src="/portfolio/7_Kingspan/011.jpg" />
+                     <img src="/portfolio/7_Kingspan_pavilion/011.jpg" />
                 </li>
             </ul>
         </div>
