--- a/client/timeaszabo.html
+++ b/client/timeaszabo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Cabin|Montserrat|Lobster Two:400,300,700" media="screen" rel="stylesheet" type="text/css" />
 
-    <title>CR Home</title>
+    <title>Timea Szabo</title>
   </head>
 
 <body>    
@@ -32,8 +32,7 @@
         <div class="row-fluid">
         <span class="span6">
             <p>
-                "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                I am a creative and passionate architect, from Budapest, Hungary (Central Europe).I am keen on art, design, smart ideas and fresh impressions. I used to study in Barcelona and worked in Rome that made me even more ambitious of acquiring lifelong skills.Due to a life-change I am currently looking for inspiring challanges and new career avenues in Boston, Massachusetts.
             </p>
         </span>
         <span class="span6 personal">
@@ -92,45 +91,45 @@
                             <div class="glass"></div>
                             <h3>Felcra University</h3>
                         </div>
-                        <img src="/portfolio/5_Felcra_University/00_index.jpg" class="image">
+                        <img src="/portfolio/5_Felcra_University/00_INDEX.jpg" class="image">
                     </a>
                 </li>
                 <li class="span4">
-                    <a class="thumbnail" href="/interschool">
+                    <a class="thumbnail" href="/inspiration">
                         <div class="hoverbg">
                             <div class="glass"></div>
-                            <h3>Térkompozíció</h3>
+                            <h3>Inspiration Hotel</h3>
                         </div>
-                        <img src="/portfolio/cover6.png" class="image">
+                        <img src="/portfolio/6_Inspiration_Hotel/00_INDEX.jpg" class="image">
                     </a>
                 </li>
             </ul>
             <ul class="thumbnails">
                 <li class="span4">
-                    <a class="thumbnail" href="/interschool">
+                    <a class="thumbnail" href="/kingspan">
                         <div class="hoverbg">
                             <div class="glass"></div>
-                            <h3>Térkompozíció</h3>
+                            <h3>Kingspan Pavilion</h3>
                         </div>
-                        <img src="/portfolio/cover7.png" class="image">
+                        <img src="/portfolio/7_Kingspan_pavilion/00_index.jpg" class="image">
                     </a>
                 </li>
                 <li class="span4">
-                    <a class="thumbnail" href="/interschool">
+                    <a class="thumbnail" href="/vivienda">
                         <div class="hoverbg">
                             <div class="glass"></div>
-                            <h3>Térkompozíció</h3>
+                            <h3>Barcelona Vivienda</h3>
                         </div>
-                        <img src="/portfolio/cover8.png" class="image">
+                        <img src="/portfolio/8_Barcelona_Vivienda/00_index.jpg" class="image">
                     </a>
                 </li>
                 <li class="span4">
-                    <a class="thumbnail" href="/interschool">
+                    <a class="thumbnail" href="/detached">
                         <div class="hoverbg">
                             <div class="glass"></div>
-                            <h3>Térkompozíció</h3>
+                            <h3>Detached House</h3>
                         </div>
-                        <img src="/portfolio/cover9.png" class="image">
+                        <img src="/portfolio/9_Detached_house/00_index.jpg" class="image">
                     </a>
                 </li>
             </ul>
@@ -147,13 +146,13 @@
     </div>
     <div class="container-fluid footer">
        <div class="container text-center">
-            <a class="twitter" href="www.twitter.com" target="_blank">
+            <a class="twitter" href="https://www.twitter.com/timea_tailor" target="_blank">
                 <i class="icon icon-twitter"></i>
             </a>
-            <a class="linkedin" href="www.linkedin.com" target="_blank">
+            <a class="linkedin" href="https://www.linkedin.com/profile/view?id=117569744&locale=en_US&trk=tyah" target="_blank">
                 <i class="icon icon-linkedin"></i>
             </a>
-            <a class="facebook" href="www.facebook.com" target="_blank">
+            <a class="facebook" href="https://www.facebook.com/aszabotimi" target="_blank">
                 <i class="icon icon-facebook"></i>
             </a>
         </div>
@@ -164,9 +163,6 @@
 <template name="bq3">
 {{#if isCurrentPage "homePage"}}
     {{>main}}
-{{/if}}
-{{#if isCurrentPage "kingspan"}}
-    {{>kingspan}}
 {{/if}}
 {{#if isCurrentPage "interschool"}}
     {{>interschool}}
@@ -182,6 +178,18 @@
 {{/if}}
 {{#if isCurrentPage "felcra"}}
     {{>felcra}}
+{{/if}}
+{{#if isCurrentPage "inspiration"}}
+    {{>inspiration}}
+{{/if}}
+{{#if isCurrentPage "kingspan"}}
+    {{>kingspan}}
+{{/if}}
+{{#if isCurrentPage "vivienda"}}
+    {{>vivienda}}
+{{/if}}
+{{#if isCurrentPage "detached"}}
+    {{>detached}}
 {{/if}}
 </template>
 
