--- a/client/portfolio/debrecen.html
+++ b/client/portfolio/debrecen.html
@@ -1,8 +1,8 @@
 <template name="debrecen">
 <div class="pf-container">
     <nav class="nav">
-        <a class="button" href=""> Prev</a>
-        <a class="button next" href="/bq">Next</a>
+        <a class="button" href="/interschool"> Prev</a>
+        <a class="button next" href="/valley">Next</a>
     </nav>
     <article class="pf-about">
         <h5>DEBRECEN STADIUM</h5>
@@ -17,37 +17,37 @@ I was responsible for the ceiling construction drawings (to design suspended cei
         <div class="flexslider">
             <ul class="slides">
                 <li>
-                    <img src="/portfolio/2_Debrecen_Stadium/01.jpg"/>
+                    <img src="/portfolio/2_Debrecen_Stadium/01.JPG"/>
                 </li>
                 <li>
-                     <img src="/portfolio/2_Debrecen_Stadium/02.jpg"/>
+                     <img src="/portfolio/2_Debrecen_Stadium/02.JPG"/>
                 </li>
                 <li>
-                     <img src="/portfolio/2_Debrecen_Stadium/03.jpg"/>
+                     <img src="/portfolio/2_Debrecen_Stadium/03.JPG"/>
                 </li>
                 <li>
-                     <img src="/portfolio/2_Debrecen_Stadium/04.jpg"/>
+                     <img src="/portfolio/2_Debrecen_Stadium/04.JPG"/>
                 </li>
                 <li>
-                    <img src="/portfolio/2_Debrecen_Stadium/05.jpg"/>
+                    <img src="/portfolio/2_Debrecen_Stadium/05.JPG"/>
                 </li>
                 <li>
-                     <img src="/portfolio/2_Debrecen_Stadium/06.jpg"/>
+                     <img src="/portfolio/2_Debrecen_Stadium/06.JPG"/>
                 </li>
                 <li>
-                     <img src="/portfolio/2_Debrecen_Stadium/07.jpg"/>
+                     <img src="/portfolio/2_Debrecen_Stadium/07.JPG"/>
                 </li>
                 <li>
-                     <img src="/portfolio/2_Debrecen_Stadium/08.jpg"/>
+                     <img src="/portfolio/2_Debrecen_Stadium/08.JPG"/>
                 </li>
                 <li>
-                    <img src="/portfolio/2_Debrecen_Stadium/09.jpg" />
+                    <img src="/portfolio/2_Debrecen_Stadium/09.JPG" />
                 </li>
                 <li>
-                     <img src="/portfolio/2_Debrecen_Stadium/010.jpg"/>
+                     <img src="/portfolio/2_Debrecen_Stadium/010.JPG"/>
                 </li>
                 <li>
-                     <img src="/portfolio/2_Debrecen_Stadium/011.jpg" />
+                     <img src="/portfolio/2_Debrecen_Stadium/011.JPG" />
                 </li>
             </ul>
         </div>
