--- a/client/portfolio/inter_school.html
+++ b/client/portfolio/inter_school.html
@@ -1,8 +1,8 @@
 <template name="interschool">
 <div class="pf-container">
     <nav class="nav">
-        <a class="button" href=""> Prev</a>
-        <a class="button next" href="/bq">Next</a>
+        <a class="button" href="/detached"> Prev</a>
+        <a class="button next" href="/debrecen">Next</a>
     </nav>
     <article class="pf-about">
         <h5>INTERNATIONAL SCHOOL</h5>
@@ -45,6 +45,36 @@ I was interested in special education systems (such as the Montessori-method) so
                 </li>
                 <li>
                      <img src="/portfolio/1_International_school/011.jpg" />
+                </li>
+                <li>
+                    <img src="/portfolio/1_International_school/012.jpg"/>
+                </li>
+                <li>
+                     <img src="/portfolio/1_International_school/013.jpg"/>
+                </li>
+                <li>
+                     <img src="/portfolio/1_International_school/014.jpg"/>
+                </li>
+                <li>
+                     <img src="/portfolio/1_International_school/015.jpg"/>
+                </li>
+                <li>
+                    <img src="/portfolio/1_International_school/016.jpg"/>
+                </li>
+                <li>
+                     <img src="/portfolio/1_International_school/017.jpg"/>
+                </li>
+                <li>
+                     <img src="/portfolio/1_International_school/018.jpg"/>
+                </li>
+                <li>
+                     <img src="/portfolio/1_International_school/019.jpg"/>
+                </li>
+                <li>
+                    <img src="/portfolio/1_International_school/20.jpg" />
+                </li>
+                <li>
+                     <img src="/portfolio/1_International_school/021.jpg"/>
                 </li>
             </ul>
         </div>
