Js bugfix, fontok

--- a/client/timeaszabo.html
+++ b/client/timeaszabo.html
@@ -32,14 +32,14 @@
         <div class="row-fluid">
         <span class="span6">
             <p>
-                I am a creative and passionate architect, from Budapest, Hungary (Central Europe).I am keen on art, design, smart ideas and fresh impressions. I used to study in Barcelona and worked in Rome that made me even more ambitious of acquiring lifelong skills.Due to a life-change I am currently looking for inspiring challanges and new career avenues in Boston, Massachusetts.
+                I am a creative and passionate architect from Hungary, Central Europe. I am keen on art, design, smart ideas and fresh impressions. I used to study in Barcelona, graduated in Budapest and worked in Rome that made me even more ambitious of acquiring lifelong skills. Due to a life-change I am currently looking for inspiring challanges and new career avenues in Boston, Massachusetts.
             </p>
         </span>
         <span class="span6 personal">
             <img src="personal.jpg" alt=""/>
         </span>
       </div>
-      <div class="text-center"> <a class="button email" href="#">View my CV</a></div>
+      <div class="text-center"> <a class="button email" href="/TimeaSzabo_CV.pdf">View my CV</a></div>
     </div>
     <div class="container-fluid portfolio">
         <div class="text-center"><h2>Portfolio</h2></div>
@@ -139,7 +139,7 @@
          <div class="container text-center">
              <article>
                  <h2>Get in touch</h2>
-                 <p>Like what you see, or just want to talk? Feel free to contact me anytime, I'm always open to new projects and opportunities. <br/> So, why don't you mail me?</p>
+                 <p>Like what you see, or just want to talk? Feel free to contact me anytime, I'm always open to new projects and opportunities. </p>
                  <a class="button email" href="mailto:timea@inbox.com">timea@inbox.com</a>
              </article>
          </div>
