--- a/client/timeaszabo.html
+++ b/client/timeaszabo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Cabin|Montserrat|Lobster Two:400,300,700" media="screen" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Cabin|Montserrat|Raleway:400,100,200" media="screen" rel="stylesheet" type="text/css" />
 
     <title>Timea Szabo</title>
   </head>
@@ -18,7 +18,7 @@
             <h1>Timea Szabo</h1>
             <h2>Architect</h2>
         </div>
-        <div class="fs1" aria-hidden="true" data-icon="&#xe000;" id="scrollto" style="position: absolute; bottom: 2em; left: 50%; font-size: 3em; color: #fff; cursor: pointer;"></div>
+        <div class="fs1" aria-hidden="true" data-icon="&#xe000;" id="scrollto" style="position: absolute; bottom: 2em; left: 50%; font-size: 3em; cursor: pointer;"></div>
     </div>
     <div class="navbar">
          <div class="links">
@@ -32,11 +32,11 @@
         <div class="row-fluid">
         <span class="span6">
             <p>
-                I am a creative and passionate architect from Hungary, Central Europe. I am keen on art, design, smart ideas and fresh impressions. I used to study in Barcelona, graduated in Budapest and worked in Rome that made me even more ambitious of acquiring lifelong skills. Due to a life-change I am currently looking for inspiring challanges and new career avenues in Boston, Massachusetts.
+                I am a creative and passionate architect from Hungary, Europe. I am keen on art, design, smart ideas and fresh impressions. I used to study in Barcelona, graduated in Budapest and worked in Rome. I like to share thoughts and collaborate yet I am ambitious of raising my sights and acquiring lifelong skills. I gained various work experience in the field of <a href="/TimeaSzabo_BICUADRO_reference.pdf">architectural design</a>, <a href="/TimeaSzabo_FUTUREAL_reference.pdf">real estate development</a> and <a href="/TimeaSzabo_GROHE_reference.pdf">project management</a> as you can read in my letters of reference. Due to a life-change I am currently looking for inspiring challenges and new career avenues in Boston, Massachusetts.
             </p>
         </span>
         <span class="span6 personal">
-            <img src="personal.jpg" alt=""/>
+            <img src="personal.jpg" id="personal" alt=""/>
         </span>
       </div>
       <div class="text-center"> <a class="button email" href="/TimeaSzabo_CV.pdf">View my CV</a></div>
@@ -59,6 +59,7 @@
                         <div class="hoverbg">
                             <div class="glass"></div>
                             <h3>Debrecen Stadium</h3>
+
                         </div>
                   
                             <img src="/portfolio/2_Debrecen_Stadium/00_index.jpg" class="image">
