sign, about me picture

--- a/client/timeaszabo.html
+++ b/client/timeaszabo.html
@@ -15,7 +15,7 @@
 <template name="main">
 <div class="main-container">
         <div class="title">
-            <h1>Timea Szabo AAA</h1>
+            <img src="/sign.png" alt=""/>
             <h2>Architect</h2>
         </div>
         <div class="fs1" aria-hidden="true" data-icon="&#xe000;" id="scrollto" style="position: absolute; bottom: 2em; left: 50%; font-size: 3em; cursor: pointer;"></div>
@@ -36,7 +36,7 @@
             </p>
         </span>
         <span class="span6 personal">
-            <img src="personal.jpg" id="personal" alt=""/>
+            <img src="ff.jpg" id="personal" alt=""/>
         </span>
       </div>
       <div class="text-center"> <a class="button email" href="/TimeaSzabo_CV.pdf">View my CV</a></div>
