--- a/client/portfolio/felcra.html
+++ b/client/portfolio/felcra.html
@@ -1,14 +1,22 @@
 <template name="felcra">
 <div class="pf-container">
     <nav class="nav">
-        <a class="button" href="/eden"> Prev</a>
-        <a class="button next" href="/inspiration">Next</a>
+        <a class="button" href="/eden"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
+        <a class="button next" href="/inspiration">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
     </nav>
     <article class="pf-about">
         <h5>FELCRA UNIVERSITY</h5>
+        <h3>BiCuadro Architects & Akitek Rekabina</h3>
+        <h3>Seberang Perak, Malaysia</h3>
+        <h3>2012</h3>
         <p>
+            Masterplan for Felcra International College - Research and Development Center.
+I designed and built in 3D the R&D quarter of the city. 
+        </p>
+        <div class="back">
+        <a href="/"  class="button back"><i class="icon icon-home"></i>Home</a>
+    </div>
 
-</p>
     </article>
     <div class="main">
         <div class="flexslider">
