--- a/client/portfolio/debrecen.html
+++ b/client/portfolio/debrecen.html
@@ -1,17 +1,22 @@
 <template name="debrecen">
 <div class="pf-container">
     <nav class="nav">
-        <a class="button" href="/interschool"> Prev</a>
-        <a class="button next" href="/valley">Next</a>
+        <a class="button" href="/interschool"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
+        <a class="button next" href="/valley">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
     </nav>
     <article class="pf-about">
-        <h5>DEBRECEN STADIUM</h5>
+        <h5>GREAT FOREST STADIUM</h5>
+        <h3>BORD Studio</h3>
+        <h3>Debrecen, Hungary</h3>
+        <h3>2013</h3>
         <p>
 Peter Bordás, founder and lead architect of Bord Architectural Studio, has been commissioned by Nagyerdei Stadionrekonstrukciós Kft. to design a new stadium for one of the biggest cities of Hungary, Debrecen. According to BORD Studio's ideas, the stadium is a so-called fourth generation development, which means that it is not only able to house sport events, but serves as a leisure and community center for the city's inhabitants throughout the year. The building will be integrated harmonically into an existing park, offering several possibilities of sports and entertainment to the public. The asymmetric construction is covered by a transparent structure, which allows the building to be integrated harmonically into the surrounding landscape. The stadium is to be completed in early 2014 with the capacity for 20.000 visitors. 
 I was responsible for the ceiling construction drawings (to design suspended ceilings, to dispose all the building service engineering systems and low voltage fittings) and I contributed to the interior design plans, drafting sheer-draughts and defining details of non-series furnitures.
-
- 
 </p>
+<div class="back">
+        <a href="/"  class="button back"><i class="icon icon-home"></i>Home</a>
+    </div>
+
     </article>
     <div class="main">
         <div class="flexslider">
