--- a/client/portfolio/detached.html
+++ b/client/portfolio/detached.html
@@ -1,13 +1,21 @@
 <template name="detached">
 <div class="pf-container">
     <nav class="nav">
-        <a class="button" href="/vivienda"> Prev</a>
-        <a class="button next" href="/interschool">Next</a>
+        <a class="button" href="/vivienda"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
+        <a class="button next" href="/bicycle">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
     </nav>
     <article class="pf-about">
         <h5>DETACHED HOUSE</h5>
+        <h3>university project at BUTE</h3>
+        <h3>Budapest, Hungary</h3>
+        <h3>2007</h3>
         <p> 
+            My very first design project from the second year. It's a private house for a family with 4 children on a intense sloped hill. I still like to look at it with nice nostalgy.
 </p>
+<div class="back">
+        <a href="/"  class="button back"><i class="icon icon-home"></i>Home</a>
+    </div>
+
     </article>
     <div class="main">
         <div class="flexslider">
