--- a/client/portfolio/eden.html
+++ b/client/portfolio/eden.html
@@ -1,15 +1,20 @@
 <template name="eden">
 <div class="pf-container">
     <nav class="nav">
-        <a class="button" href="/valley"> Prev</a>
-        <a class="button next" href="/felcra">Next</a>
+        <a class="button" href="/valley"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
+        <a class="button next" href="/felcra">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
     </nav>
     <article class="pf-about">
-        <h5>EDEN PARC</h5>
-        <p>
+        <h5>EDEN PARC HOTEL</h5>
+        <h3>BiCuadro Architects</h3>
+        <h3>Lugano, Switzerland</h3>
+        <h3>2012</h3>
+        <p>The proposed project has the overall aim to achieve a high-tech multi-functional structure housing hotel rooms, apartments, spa, offices and parking. So it is able to promote the development of tourism in the region, through a new architectural image that will become the new symbol of city district Paradiso. 
+        </p>
+        <div class="back">
+        <a href="/"  class="button back"><i class="icon icon-home"></i>Home</a>
+    </div>
 
- 
-</p>
     </article>
     <div class="main">
         <div class="flexslider">
