--- a/client/portfolio/inspiration.html
+++ b/client/portfolio/inspiration.html
@@ -1,17 +1,25 @@
 <template name="inspiration">
 <div class="pf-container">
     <nav class="nav">
-        <a class="button" href="/felcra"> Prev</a>
-        <a class="button next" href="/kingspan">Next</a>
+        <a class="button" href="/felcra"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
+        <a class="button next" href="/kingspan">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
     </nav>
     <article class="pf-about">
         <h5>INSPIRATION HOTEL</h5>
+        <h3>competition with Anja Pirjevec and Lili Kovács</h3>
+        <h3>Rome, Italy</h3>
+        <h3>2012</h3>
+
         <p>
 OPENGAP organized this open ideas competition seeking for innovative, cutting-edge, contemporary, proposals regarding a new concept for artistic inspiration spaces. Participants wewe invited to design a place focused on the rental of spaces that motivate creativity and concentration, allowing users to focus, inspire and develop their artistic ideas. Each participant or team could define the location of their project, however, the proposal must had justified the choice of the location.
 With our project we wanted to create a peaceful retreat for the artists where they would be able to relay and focus on thier work. The site is a unique isolated green area, connected to the city but still able to keep the peace of the original ancient characteristic.
 We designed a body of travertino stone facing the natural beauty. The entrance side of the building is under the ground level, thus the opposite side peaks over it. Where the volume meets the ground we designed a rectangular green pation which connects the floors together, provides sunlight and a peaceful rest yet outdoor escape for the guests.
 The building is to discover step by step. The entrance with the lobby and the gallery lead to the patio from there it continues ont he ramps towards the uper floor and ends up in the silent room, which is completely solcluded from the rest of the world with an almost shy view of the ancient ruins of the great aqueduct. 
 </p>
+<div class="back">
+        <a href="/"  class="button back"><i class="icon icon-home"></i>Home</a>
+    </div>
+
     </article>
     <div class="main">
         <div class="flexslider">
