--- a/client/portfolio/inter_school.html
+++ b/client/portfolio/inter_school.html
@@ -1,14 +1,20 @@
 <template name="interschool">
 <div class="pf-container">
     <nav class="nav">
-        <a class="button" href="/detached"> Prev</a>
-        <a class="button next" href="/debrecen">Next</a>
+        <a class="button" href="/bicycle"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
+        <a class="button next" href="/debrecen">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
     </nav>
     <article class="pf-about">
         <h5>INTERNATIONAL SCHOOL</h5>
+        <h3>Final Project</h3>
+        <h3>Budakeszi, Hungary</h3>
+        <h3>2013</h3>
         <p>Greater Grace International School is a private English-language preparatory - 12th grade school located in Budapest´s beautiful 12th district. Since 1991 GGIS has provided expatriate and Hungarian families with a college preparatory education; equipping the student academically, spiritually and physically; teaching and demonstrating in the context of a Christian biblical world view. Due to the growth of the school, GGIS board decided to move ahead and build a new building in the close suburb Budakeszi. 
 I was interested in special education systems (such as the Montessori-method) so I was happy to have the opportunity to design a school for real purpose as my final project. 
 </p>
+    <div class="back">
+        <a href="/"  class="button back"><i class="icon icon-home"></i>Home</a>
+    </div>
     </article>
     <div class="main">
         <div class="flexslider">
