--- a/client/portfolio/kingspan.html
+++ b/client/portfolio/kingspan.html
@@ -1,14 +1,22 @@
 <template name="kingspan">
 <div class="pf-container">
     <nav class="nav">
-        <a class="button" href="/inspiration"> Prev</a>
-        <a class="button next" href="/vivienda">Next</a>
+        <a class="button" href="/inspiration"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
+        <a class="button next" href="/vivienda">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
     </nav>
     <article class="pf-about">
         <h5>KINGSPAN PAVILION</h5>
+        <h3>competition with Anja Pirjevec</h3>
+        <h3>Belgrade, Serbia</h3>
+        <h3>2013</h3>
         <p>
- 
+ International competition for "The 2nd Annual ARCHITEKTON Magazine Award".
+Preliminary design of a pavilion with the creative usage of different Kingspan panels that realistically reflects the idea of contemporary architecture - what it is and what it should be, also affirming architecture itself.
         </p>
+        <div class="back">
+        <a href="/"  class="button back"><i class="icon icon-home"></i>Home</a>
+    </div>
+
     </article>
     <div class="main">
         <div class="flexslider">
