--- a/client/portfolio/valley.html
+++ b/client/portfolio/valley.html
@@ -1,15 +1,19 @@
 <template name="valley">
 <div class="pf-container">
     <nav class="nav">
-        <a class="button" href="/debrecen"> Prev</a>
-        <a class="button next" href="/eden">Next</a>
+        <a class="button" href="/debrecen"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
+        <a class="button next" href="/eden">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
     </nav>
     <article class="pf-about">
         <h5>VALLEY RESIDENCIES</h5>
-        <p>
+        <h3>BORD Studio</h3>
+        <h3>Debrecen, Hungary</h3>
+        <h3>2013</h3>
+        <p>Preliminary design of a residency complex for a private real estate developer. I was responsible for the plans of the condominiums: different flat types meeting the acquired apartment-mix, floor plans and sections.</p>
+        <div class="back">
+        <a href="/"  class="button back"><i class="icon icon-home"></i>Home</a>
+    </div>
 
- 
-</p>
     </article>
     <div class="main">
         <div class="flexslider">
