--- a/client/portfolio/vivienda.html
+++ b/client/portfolio/vivienda.html
@@ -1,13 +1,23 @@
 <template name="vivienda">
 <div class="pf-container">
     <nav class="nav">
-        <a class="button" href="/kingspan"> Prev</a>
-        <a class="button next" href="/detached">Next</a>
+        <a class="button" href="/kingspan"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
+        <a class="button next" href="/detached">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
     </nav>
     <article class="pf-about">
         <h5>BARCELONA VIVIENDA</h5>
+       
+        <h3>university project at UPC-ETSAB</h3>
+        <h3>Barcelona, Catalonia</h3>
+        <h3>2011</h3>
+
         <p> 
+            Residential complex in the new district @22 Barcelona housing different flat prototypes for different needs of various inhabitants.
         </p>
+        <div class="back">
+        <a href="/"  class="button back"><i class="icon icon-home"></i>Home</a>
+    </div>
+
     </article>
     <div class="main">
         <div class="flexslider">
