--- a/client/timeaszabo.html
+++ b/client/timeaszabo.html
@@ -2,6 +2,7 @@
   
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Cabin|Montserrat|Raleway:400,100,200" media="screen" rel="stylesheet" type="text/css" />
 
@@ -134,6 +135,17 @@
                     </a>
                 </li>
             </ul>
+             <ul class="thumbnails">
+                <li class="span4">
+                    <a class="thumbnail" href="/bicycle">
+                        <div class="hoverbg">
+                            <div class="glass"></div>
+                            <h3>Bicycle Coffee</h3>
+                        </div>
+                        <img src="/portfolio/10_Bicycle_standby/00_index.jpg" class="image">
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
     <div class="container-fluid contact">
@@ -191,6 +203,9 @@
 {{/if}}
 {{#if isCurrentPage "detached"}}
     {{>detached}}
+{{/if}}
+{{#if isCurrentPage "bicycle"}}
+    {{>bicycle}}
 {{/if}}
 </template>
 
