--- a/client/portfolio/debrecen.html
+++ b/client/portfolio/debrecen.html
@@ -1,7 +1,7 @@
 <template name="debrecen">
 <div class="pf-container">
     <nav class="nav">
-        <a class="button" href="/interschool"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
+        <a class="button" href="/sketches"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
         <a class="button next" href="/valley">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
     </nav>
     <article class="pf-about">
