--- a/client/timeaszabo.html
+++ b/client/timeaszabo.html
@@ -33,7 +33,7 @@
         <div class="row-fluid">
         <span class="span6">
             <p>
-                I am a creative and passionate architect from Hungary, Europe. I am keen on art, design, smart ideas and fresh impressions. I used to study in Barcelona, graduated in Budapest and worked in Rome. I like to share thoughts and collaborate yet I am ambitious of raising my sights and acquiring lifelong skills. I gained various work experience in the field of <a href="/TimeaSzabo_BICUADRO_reference.pdf">architectural design</a>, <a href="/TimeaSzabo_FUTUREAL_reference.pdf">real estate development</a> and <a href="/TimeaSzabo_GROHE_reference.pdf">project management</a> as you can read in my letters of reference. Due to a life-change I am currently looking for inspiring challenges and new career avenues in Boston, Massachusetts.
+                Hello, my name is Timea Szabo and I am a creative and passionate architect from Hungary, Europe. I used to study in Barcelona, graduated in Budapest and worked in Rome. I like to share thoughts and collaborate yet I am ambitious of raising my sights and acquiring lifelong skills. I gained various work experience in the field of <a href="/TimeaSzabo_BICUADRO_reference.pdf">architectural design</a>, <a href="/TimeaSzabo_FUTUREAL_reference.pdf">real estate development</a> and <a href="/TimeaSzabo_GROHE_reference.pdf">project management</a> as you can read in my letters of reference. I am keen on art, design, smart ideas and fresh impressions. Due to a life-change I am currently looking for inspiring challenges and new career avenues in Boston, Massachusetts. I am eligible for J-1 visa about you can find further details in this <a href="http://www.interexchange.org/sites/interexchange.org/files/career-training-usa/pdfs/ct-endorsement-letter.pdf?url=%2Fct-endorsement-letter-pdf">endorsement letter</a>. If you are interested please view my CV.
             </p>
         </span>
         <span class="span6 personal">
@@ -45,16 +45,7 @@
     <div class="container-fluid portfolio">
         <div class="text-center"><h2>Portfolio</h2></div>
         <div class="container grid">
-            <ul class="thumbnails">
-                <li class="span4">
-                    <a class="thumbnail" href="/interschool">
-                        <div class="hoverbg">
-                            <div class="glass"></div>
-                            <h3>International School</h3>
-                        </div>
-                            <img src="/portfolio/1_International_school/00_index.jpg" class="image">
-                    </a>
-                </li>
+            <ul class="thumbnails">                
                 <li class="span4">
                    <a class="thumbnail" href="/debrecen">
                         <div class="hoverbg">
@@ -62,9 +53,7 @@
                             <h3>Debrecen Stadium</h3>
 
                         </div>
-                  
                             <img src="/portfolio/2_Debrecen_Stadium/00_index.jpg" class="image">
-                        
                     </a>
                 </li>
                 <li class="span4">
@@ -76,6 +65,15 @@
                            <img src="/portfolio/3_Valley_residencies/00_index.jpg" class="image">
                     </a>
                 </li>
+                <li class="span4">
+                    <a class="thumbnail" href="/interschool">
+                        <div class="hoverbg">
+                            <div class="glass"></div>
+                            <h3>International School</h3>
+                        </div>
+                            <img src="/portfolio/1_International_school/00_index.jpg" class="image">
+                    </a>
+                </li>                
             </ul>
             <ul class="thumbnails">
                 <li class="span4">
@@ -126,12 +124,12 @@
                     </a>
                 </li>
                 <li class="span4">
-                    <a class="thumbnail" href="/detached">
+                    <a class="thumbnail" href="/incubator">
                         <div class="hoverbg">
                             <div class="glass"></div>
-                            <h3>Detached House</h3>
+                            <h3>Incubator House</h3>
                         </div>
-                        <img src="/portfolio/9_Detached_house/00_index.jpg" class="image">
+                        <img src="/portfolio/11_Incubator_house/0_index.jpg" class="image">
                     </a>
                 </li>
             </ul>
@@ -143,6 +141,24 @@
                             <h3>Bicycle Coffee</h3>
                         </div>
                         <img src="/portfolio/10_Bicycle_standby/00_index.jpg" class="image">
+                    </a>
+                </li>
+                <li class="span4">
+                    <a class="thumbnail" href="/detached">
+                        <div class="hoverbg">
+                            <div class="glass"></div>
+                            <h3>Detached House</h3>
+                        </div>
+                        <img src="/portfolio/9_Detached_house/00_index.jpg" class="image">
+                    </a>
+                </li>
+                <li class="span4">
+                    <a class="thumbnail" href="/sketches">
+                        <div class="hoverbg">
+                            <div class="glass"></div>
+                            <h3>Sketches</h3>
+                        </div>
+                        <img src="/portfolio/12_Sketches/00_index.jpg" class="image">
                     </a>
                 </li>
             </ul>
@@ -206,6 +222,12 @@
 {{/if}}
 {{#if isCurrentPage "bicycle"}}
     {{>bicycle}}
+{{/if}}
+{{#if isCurrentPage "incubator"}}
+    {{>incubator}}
+{{/if}}
+{{#if isCurrentPage "sketches"}}
+    {{>sketches}}
 {{/if}}
 </template>
 
