--- a/client/portfolio/bicycle.html
+++ b/client/portfolio/bicycle.html
@@ -1,8 +1,8 @@
 <template name="bicycle">
 <div class="pf-container">
     <nav class="nav">
-        <a class="button" href="/detached"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
-        <a class="button next" href="/interschool">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
+        <a class="button" href="/incubator"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
+        <a class="button next" href="/detached">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
     </nav>
     <article class="pf-about">
         <h5>Bicycle Coffee</h5>
