--- a/client/portfolio/detached.html
+++ b/client/portfolio/detached.html
@@ -1,8 +1,8 @@
 <template name="detached">
 <div class="pf-container">
     <nav class="nav">
-        <a class="button" href="/vivienda"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
-        <a class="button next" href="/bicycle">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
+        <a class="button" href="/bicycle"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
+        <a class="button next" href="/sketches">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
     </nav>
     <article class="pf-about">
         <h5>DETACHED HOUSE</h5>
