--- a/client/portfolio/inter_school.html
+++ b/client/portfolio/inter_school.html
@@ -1,8 +1,8 @@
 <template name="interschool">
 <div class="pf-container">
     <nav class="nav">
-        <a class="button" href="/bicycle"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
-        <a class="button next" href="/debrecen">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
+        <a class="button" href="/valley"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
+        <a class="button next" href="/eden">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
     </nav>
     <article class="pf-about">
         <h5>INTERNATIONAL SCHOOL</h5>
