--- a/client/portfolio/valley.html
+++ b/client/portfolio/valley.html
@@ -2,7 +2,7 @@
 <div class="pf-container">
     <nav class="nav">
         <a class="button" href="/debrecen"><i class="icon-arrow-left" style="padding-right: 5px"></i>Prev</a>
-        <a class="button next" href="/eden">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
+        <a class="button next" href="/interschool">Next<i class="icon-arrow-right" style="padding-left: 8px"></i></a>
     </nav>
     <article class="pf-about">
         <h5>VALLEY RESIDENCIES</h5>
