--- a/client/timeaszabo.html
+++ b/client/timeaszabo.html
@@ -16,8 +16,7 @@
 <template name="main">
 <div class="main-container">
         <div class="title">
-            <img src="/sign.png" alt=""/>
-            <h2>Architect</h2>
+            <img src="/logo.png" alt=""/>
         </div>
         <div class="fs1" aria-hidden="true" data-icon="&#xe000;" id="scrollto" style="position: absolute; bottom: 2em; left: 50%; font-size: 3em; cursor: pointer;"></div>
     </div>
@@ -33,7 +32,7 @@
         <div class="row-fluid">
         <span class="span6">
             <p>
-                Hello, my name is Timea Szabo and I am a creative and passionate architect from Hungary, Europe. I used to study in Barcelona, graduated in Budapest and worked in Rome. I like to share thoughts and collaborate yet I am ambitious of raising my sights and acquiring lifelong skills. I gained various work experience in the field of <a href="/TimeaSzabo_BICUADRO_reference.pdf">architectural design</a>, <a href="/TimeaSzabo_FUTUREAL_reference.pdf">real estate development</a> and <a href="/TimeaSzabo_GROHE_reference.pdf">project management</a> as you can read in my letters of reference. I am keen on art, design, smart ideas and fresh impressions. Due to a life-change I am currently looking for inspiring challenges and new career avenues in Boston, Massachusetts. I am eligible for J-1 visa about you can find further details in this <a href="http://www.interexchange.org/sites/interexchange.org/files/career-training-usa/pdfs/ct-endorsement-letter.pdf?url=%2Fct-endorsement-letter-pdf">endorsement letter</a>. If you are interested please view my CV.
+                Hello, my name is Timea Szabo and I am a creative and passionate architect from Hungary, Europe. I used to study in Barcelona, graduated in Budapest and worked in Rome. I like to share thoughts and collaborate yet I am ambitious of raising my sights and acquiring lifelong skills. I gained various work experience in the field of <a href="/TimeaSzabo_BICUADRO_reference.pdf" target="_blank">architectural design</a>, <a href="/TimeaSzabo_FUTUREAL_reference.pdf" target="_blank">real estate development</a> and <a href="/TimeaSzabo_GROHE_reference.pdf" target="_blank">project management</a> as you can read in my letters of reference. I am keen on art, design, smart ideas and fresh impressions. Due to a life-change I am currently looking for inspiring challenges and new career avenues in Boston, Massachusetts. I am eligible for J-1 visa about you can find further details in this <a href="http://www.interexchange.org/sites/interexchange.org/files/career-training-usa/pdfs/ct-endorsement-letter.pdf?url=%2Fct-endorsement-letter-pdf" target="_blank">endorsement letter</a>. If you are interested please view my CV.
             </p>
         </span>
         <span class="span6 personal">
