--- a/client/portfolio/debrecen.html
+++ b/client/portfolio/debrecen.html
@@ -22,7 +22,7 @@ I was responsible for the ceiling construction drawings (to design suspended cei
         <div class="flexslider">
             <ul class="slides">
                 <li>
-                    <img src="/portfolio/2_Debrecen_Stadium/01.JPG"/>
+                    <img src="/portfolio/3_Valley_residencies/00_index.jpg"/>
                 </li>
                 <li>
                      <img src="/portfolio/2_Debrecen_Stadium/02.JPG"/>
