--- a/client/portfolio/eden.html
+++ b/client/portfolio/eden.html
@@ -46,6 +46,18 @@
                 <li>
                     <img src="/portfolio/4_Eden_Parc/09.jpg" />
                 </li>
+                <li>
+                    <img src="/portfolio/4_Eden_Parc/010.jpg" />
+                </li>
+                <li>
+                    <img src="/portfolio/4_Eden_Parc/011.jpg" />
+                </li>
+                <li>
+                    <img src="/portfolio/4_Eden_Parc/012.jpg" />
+                </li>
+                <li>
+                    <img src="/portfolio/4_Eden_Parc/013.jpg" />
+                </li>
             </ul>
         </div>
     </div>
