--- a/client/timeaszabo.html
+++ b/client/timeaszabo.html
@@ -16,7 +16,7 @@
 <template name="main">
 <div class="main-container">
         <div class="title">
-            <img src="/logo.png" alt=""/>
+            <img src="/logo_lentebb.png" alt=""/>
         </div>
         <div class="fs1" aria-hidden="true" data-icon="&#xe000;" id="scrollto" style="position: absolute; bottom: 2em; left: 50%; font-size: 3em; cursor: pointer;"></div>
     </div>
@@ -28,18 +28,18 @@
          </div>
     </div>
     <div class="container-fluid about">
-        <div class="text-center"><h2>About me</h2></div>
+        <div class="text-center"><img src="/logo_ABOUTME_fekete.png" alt=""/></div>
         <div class="row-fluid">
         <span class="span6">
             <p>
-                Hello, my name is Timea Szabo and I am a creative and passionate architect from Hungary, Europe. I used to study in Barcelona, graduated in Budapest and worked in Rome. I like to share thoughts and collaborate yet I am ambitious of raising my sights and acquiring lifelong skills. I gained various work experience in the field of <a href="/TimeaSzabo_BICUADRO_reference.pdf" target="_blank">architectural design</a>, <a href="/TimeaSzabo_FUTUREAL_reference.pdf" target="_blank">real estate development</a> and <a href="/TimeaSzabo_GROHE_reference.pdf" target="_blank">project management</a> as you can read in my letters of reference. I am keen on art, design, smart ideas and fresh impressions. Due to a life-change I am currently looking for inspiring challenges and new career avenues in Boston, Massachusetts. I am eligible for J-1 visa about you can find further details in this <a href="http://www.interexchange.org/sites/interexchange.org/files/career-training-usa/pdfs/ct-endorsement-letter.pdf?url=%2Fct-endorsement-letter-pdf" target="_blank">endorsement letter</a>. If you are interested please view my CV.
+                Hello, my name is Timea Szabo and I am a creative and passionate architect from Hungary, Europe. I used to study in Barcelona, graduated in Budapest and worked in Rome. I like to share thoughts and collaborate yet I am ambitious of raising my sights and acquiring lifelong skills. I gained various work experience in the field of <a href="/TimeaSzabo_BICUADRO_reference.pdf" target="_blank">architectural design</a>, <a href="/TimeaSzabo_FUTUREAL_reference.pdf" target="_blank">real estate development</a> and <a href="/TimeaSzabo_GROHE_reference.pdf" target="_blank">project management</a> as you can read in my letters of reference. I am keen on <a href="/Volunteer recomm_ART Market_TimeaSzabo.pdf" target="_blank">art</a>, design, smart ideas and fresh impressions. Due to a life-change I am currently looking for inspiring challenges and new career avenues in Boston, Massachusetts. I am eligible for J-1 visa about you can find further details in this <a href="http://www.interexchange.org/sites/interexchange.org/files/career-training-usa/pdfs/ct-endorsement-letter.pdf?url=%2Fct-endorsement-letter-pdf" target="_blank">endorsement letter</a>. If you are interested please view my CV.
             </p>
         </span>
         <span class="span6 personal">
             <img src="ff.jpg" id="personal" alt=""/>
         </span>
       </div>
-      <div class="text-center"> <a class="button email" href="/TimeaSzabo_CV.pdf">View my CV</a></div>
+      <div class="text-center"> <a class="button email" href="/TimeaSzabo_CV.pdf" target="_blank">View my CV</a></div>
     </div>
     <div class="container-fluid portfolio">
         <div class="text-center"><h2>Portfolio</h2></div>
