--- a/client/timeaszabo.html
+++ b/client/timeaszabo.html
@@ -28,7 +28,6 @@
          </div>
     </div>
     <div class="container-fluid about">
-        <div class="text-center"><img src="/logo_ABOUTME_fekete.png" alt=""/></div>
         <div class="row-fluid">
         <span class="span6">
             <p>
@@ -39,10 +38,9 @@
             <img src="ff.jpg" id="personal" alt=""/>
         </span>
       </div>
-      <div class="text-center"> <a class="button email" href="/TimeaSzabo_CV.pdf" target="_blank">View my CV</a></div>
+      <div class="text-center"> <a class="button email" href="/Resume_TimeaSzabo.pdf" target="_blank">View my CV</a></div>
     </div>
     <div class="container-fluid portfolio">
-        <div class="text-center"><h2>Portfolio</h2></div>
         <div class="container grid">
             <ul class="thumbnails">                
                 <li class="span4">
@@ -166,9 +164,8 @@
     <div class="container-fluid contact">
          <div class="container text-center">
              <article>
-                 <h2>Get in touch</h2>
                  <p>Like what you see, or just want to talk? Feel free to contact me anytime, I'm always open to new projects and opportunities. </p>
-                 <a class="button email" href="mailto:timea@inbox.com">timea@inbox.com</a>
+                 <a class="button email" href="mailto:timea.szabo@me.com">timea.szabo@me.com</a>
              </article>
          </div>
     </div>
