--- a/client/timeaszabo.html
+++ b/client/timeaszabo.html
@@ -31,14 +31,18 @@
         <div class="row-fluid">
         <span class="span6">
             <p>
-                Hello, my name is Timea Szabo and I am a creative and passionate architect from Hungary, Europe. I used to study in Barcelona, graduated in Budapest and worked in Rome. I like to share thoughts and collaborate yet I am ambitious of raising my sights and acquiring lifelong skills. I gained various work experience in the field of <a href="/TimeaSzabo_BICUADRO_reference.pdf" target="_blank">architectural design</a>, <a href="/TimeaSzabo_FUTUREAL_reference.pdf" target="_blank">real estate development</a> and <a href="/TimeaSzabo_GROHE_reference.pdf" target="_blank">project management</a> as you can read in my letters of reference. I am keen on <a href="/Volunteer recomm_ART Market_TimeaSzabo.pdf" target="_blank">art</a>, design, smart ideas and fresh impressions. Due to a life-change I am currently looking for inspiring challenges and new career avenues in Boston, Massachusetts. I am eligible for J-1 visa about you can find further details in this <a href="http://www.interexchange.org/sites/interexchange.org/files/career-training-usa/pdfs/ct-endorsement-letter.pdf?url=%2Fct-endorsement-letter-pdf" target="_blank">endorsement letter</a>. If you are interested please view my CV.
+                Hello, my name is Timea Szabo and I am a creative and passionate architect from Hungary, Europe. I used to study in Barcelona, graduated in Budapest and worked in Rome. I like to share thoughts and collaborate yet I am ambitious of raising my sights and acquiring lifelong skills. I gained various work experience in the field of <a href="/TimeaSzabo_BICUADRO_reference.pdf" target="_blank">architectural</a> <a href="/Reference_BORD.pdf" target="_blank">design</a>, <a href="/TimeaSzabo_FUTUREAL_reference.pdf" target="_blank">real estate development</a> and <a href="/TimeaSzabo_GROHE_reference.pdf" target="_blank">project management</a> as you can read in my letters of reference. I am keen on <a href="/Volunteer recomm_ART Market_TimeaSzabo.pdf" target="_blank">art</a>, design, smart ideas and fresh impressions. I recently moved to Boston and I am currently looking for inspiring challenges and new career avenues in the area. I am eligible for J-1 visa about you can find further details in this <a href="http://www.interexchange.org/sites/interexchange.org/files/career-training-usa/pdfs/ct-endorsement-letter.pdf?url=%2Fct-endorsement-letter-pdf" target="_blank">endorsement letter</a>. If you are interested please view my resume and work samples.
             </p>
         </span>
         <span class="span6 personal">
-            <img src="ff.jpg" id="personal" alt=""/>
+            <img src="/profilkep_ff2.jpg" id="personal" alt=""/>
         </span>
       </div>
-      <div class="text-center"> <a class="button email" href="/Resume_TimeaSzabo.pdf" target="_blank">View my CV</a></div>
+      <div class="buttons text-center">
+         <a class="button email" href="/Resume_TimeaSzabo.pdf" target="_blank">Resume</a>
+         <a class="button samples" href="http://issuu.com/timeaszabo/docs/work_samples" target="_blank">Work Samples I.</a>
+         <a class="button res-samplesl" href="http://issuu.com/timeaszabo/docs/residential_worksamples" target="_blank">Work Samples II.</a>
+      </div>
     </div>
     <div class="container-fluid portfolio">
         <div class="container grid">
